Mover criação dinâmica de elementos para o início do script para garantir disponibilidade imediata

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -254,6 +254,72 @@ function safeGetElement(id) {
 const API_URL = getApiUrl();
 let cart = [], currentFilter = 'all', currentSearch = '', currentUser = null;
 
+// Garantir que os elementos necessários existam (contra extensões que removem)
+(function ensureElements() {
+  if (!document.getElementById('cartOverlay')) {
+    const overlay = document.createElement('div');
+    overlay.className = 'cart-overlay';
+    overlay.id = 'cartOverlay';
+    overlay.onclick = (e) => { if(e.target === overlay) toggleCart(e); };
+    document.body.appendChild(overlay);
+  }
+  if (!document.getElementById('cartSidebar')) {
+    const sidebar = document.createElement('div');
+    sidebar.className = 'cart-sidebar';
+    sidebar.id = 'cartSidebar';
+    sidebar.innerHTML = `
+      <div class="cart-header">
+        <h3>🛒 Seu Carrinho</h3>
+        <button class="cart-close" onclick="toggleCart()">✕</button>
+      </div>
+      <div class="cart-items" id="cartItems"></div>
+      <div class="cart-footer">
+        <div class="cart-total"><span>Total</span><span id="cartTotal">R$ 0,00</span></div>
+        <button class="checkout-btn" onclick="openCheckout()">Finalizar Compra</button>
+      </div>
+    `;
+    document.body.appendChild(sidebar);
+  }
+  if (!document.getElementById('checkoutModal')) {
+    const modal = document.createElement('div');
+    modal.className = 'modal-overlay';
+    modal.id = 'checkoutModal';
+    modal.onclick = (e) => { if(e.target === modal) closeCheckout(); };
+    modal.innerHTML = `
+      <div class="modal" onclick="event.stopPropagation();">
+        <div class="modal-header">
+          <h3>🌶️ Finalizar Pedido</h3>
+          <button style="background:none;border:none;color:white;font-size:24px;cursor:pointer" onclick="closeCheckout()">✕</button>
+        </div>
+        <div class="modal-body" id="checkoutBody"></div>
+      </div>
+    `;
+    document.body.appendChild(modal);
+  }
+  if (!document.getElementById('authModal')) {
+    const authModal = document.createElement('div');
+    authModal.className = 'modal-overlay';
+    authModal.id = 'authModal';
+    authModal.onclick = (e) => { if(e.target === authModal) closeAuth(); };
+    authModal.innerHTML = `
+      <div class="modal" onclick="event.stopPropagation();">
+        <div class="modal-header">
+          <h3 id="authTitle">🔐 Entrar / Cadastrar</h3>
+          <button style="background:none;border:none;color:white;font-size:24px;cursor:pointer" onclick="closeAuth()">✕</button>
+        </div>
+        <div class="modal-body">
+          <div style="display: flex; gap: 10px; margin-bottom: 20px; border-bottom: 2px solid #e0d8c8; padding-bottom: 10px;">
+            <button id="tabLogin" style="flex: 1; background: transparent; border: none; padding: 10px; font-weight: 700; cursor: pointer; border-bottom: 3px solid var(--vermelho); color: var(--vermelho);" onclick="showAuthTab('login')">🔓 Entrar</button>
+            <button id="tabRegister" style="flex: 1; background: transparent; border: none; padding: 10px; font-weight: 700; cursor: pointer; border-bottom: 3px solid transparent; color: #aaa; opacity: 0.7;" onclick="showAuthTab('register')">➕ Cadastrar</button>
+          </div>
+          <div id="authContent"></div>
+        </div>
+      </div>
+    `;
+    document.body.appendChild(authModal);
+  }
+})();
+
 // API Calls
 async function getProducts() {
   try {
@@ -745,71 +811,6 @@ document.addEventListener('DOMContentLoaded', () => {
     el.classList.remove('hide_modal');
     el.style.display = '';
   });
-
-  // Garantir que os elementos necessários existam (contra extensões que removem)
-  if (!document.getElementById('cartOverlay')) {
-    const overlay = document.createElement('div');
-    overlay.className = 'cart-overlay';
-    overlay.id = 'cartOverlay';
-    overlay.onclick = (e) => { if(e.target === overlay) toggleCart(e); };
-    document.body.appendChild(overlay);
-  }
-  if (!document.getElementById('cartSidebar')) {
-    const sidebar = document.createElement('div');
-    sidebar.className = 'cart-sidebar';
-    sidebar.id = 'cartSidebar';
-    sidebar.innerHTML = `
-      <div class="cart-header">
-        <h3>🛒 Seu Carrinho</h3>
-        <button class="cart-close" onclick="toggleCart()">✕</button>
-      </div>
-      <div class="cart-items" id="cartItems"></div>
-      <div class="cart-footer">
-        <div class="cart-total"><span>Total</span><span id="cartTotal">R$ 0,00</span></div>
-        <button class="checkout-btn" onclick="openCheckout()">Finalizar Compra</button>
-      </div>
-    `;
-    document.body.appendChild(sidebar);
-  }
-  if (!document.getElementById('checkoutModal')) {
-    const modal = document.createElement('div');
-    modal.className = 'modal-overlay';
-    modal.id = 'checkoutModal';
-    modal.onclick = (e) => { if(e.target === modal) closeCheckout(); };
-    modal.innerHTML = `
-      <div class="modal" onclick="event.stopPropagation();">
-        <div class="modal-header">
-          <h3>🌶️ Finalizar Pedido</h3>
-          <button style="background:none;border:none;color:white;font-size:24px;cursor:pointer" onclick="closeCheckout()">✕</button>
-        </div>
-        <div class="modal-body" id="checkoutBody"></div>
-      </div>
-    `;
-    document.body.appendChild(modal);
-  }
-  if (!document.getElementById('authModal')) {
-    const authModal = document.createElement('div');
-    authModal.className = 'modal-overlay';
-    authModal.id = 'authModal';
-    authModal.onclick = (e) => { if(e.target === authModal) closeAuth(); };
-    authModal.innerHTML = `
-      <div class="modal" onclick="event.stopPropagation();">
-        <div class="modal-header">
-          <h3 id="authTitle">🔐 Entrar / Cadastrar</h3>
-          <button style="background:none;border:none;color:white;font-size:24px;cursor:pointer" onclick="closeAuth()">✕</button>
-        </div>
-        <div class="modal-body">
-          <div style="display: flex; gap: 10px; margin-bottom: 20px; border-bottom: 2px solid #e0d8c8; padding-bottom: 10px;">
-            <button id="tabLogin" style="flex: 1; background: transparent; border: none; padding: 10px; font-weight: 700; cursor: pointer; border-bottom: 3px solid var(--vermelho); color: var(--vermelho);" onclick="showAuthTab('login')">🔓 Entrar</button>
-            <button id="tabRegister" style="flex: 1; background: transparent; border: none; padding: 10px; font-weight: 700; cursor: pointer; border-bottom: 3px solid transparent; color: #aaa; opacity: 0.7;" onclick="showAuthTab('register')">➕ Cadastrar</button>
-          </div>
-          <div id="authContent"></div>
-        </div>
-      </div>
-    `;
-    document.body.appendChild(authModal);
-  }
-
   renderProducts();
   updateAuthUI();
 });
